# MyOptimizer

./: README.md  config_Optimizador.json  main.py  pyproject.toml  requirements.txt  test.py  ui.py  urlwhiteboard.txt
src/: config_Optimizador.json  main.py  test.py  utils.py
