[project]
name = "MyOptimizer"
version = "0.1.0"
description = "File optimization and management tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MarcRoviraP", email = "marcrovira2eso1@gmail.com" }
]
dependencies = [
    "flet>=0.80.5",
    "platformdirs>=4.7.0"
]

[tool.flet]
org = "com.MarcRoviraP"
product = "MyOptimizer"
company = "MarcRoviraP"
copyright = "Copyright (C) 2026 by MarcRoviraP"

[tool.flet.app]
path = "src"
assets = "assets"
